# lexigraph

server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: db.rs  main.rs
server/tests/: quick_dev.rs
