[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
